--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Coding Tasks Rubric with Git.docx
 /How to read file in Java using Scanner Example - text files - Java67.url
 /Luhn Algorithm Project.docx
+Writing to a file.url
